<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_converter__main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.elte.hu.temperatureconverter.Converter_Main">

    <TextView
        android:text="@string/convertHelp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:inputType="number"
        android:background="@color/Grey39"
        android:textAlignment="center"
        android:id="@+id/temperatureValue"
        android:layout_marginTop="140dp"/>
    <Button
        android:text="Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="250dp"
        android:id="@+id/resetBtn"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="280dp"
        android:id="@+id/radioGroup">

        <RadioButton
            android:text="Celsius to Fahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cTofRadio"/>
        <RadioButton
            android:text="Fahrenheit to Celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fTocRadio"/>
    </RadioGroup>

    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="490dp"
        android:textAlignment="center"
        android:textColor="@color/Red"
        android:id="@+id/errorTextView"/>

    <Button
        android:text="CONVERT"
        android:textSize="70px"
        android:background="@color/Orange"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="56dp"
        android:id="@+id/convertBtn"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
